# sorting-algorithms-c

./: CMakeLists.txt  Dockerfile  main.c  resources.txt  run.bat
array/: array.c  array.h
scratch/: bucket.c  heap.c  insertion.c  merge.c  quick.c
sort/: bubble.c  insertion.c  order.md  selection.c  shell.c
sort/bubble/: bubble.c  bubble.h
sort/insertion/: insertion.c  insertion.h
sort/selection/: selection.c  selection.h
